--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,58 +10,61 @@ endif()
 
 cmake_minimum_required(VERSION 3.22)
 
-project(opentyrian LANGUAGES C)
+project(opentyrian LANGUAGES CXX)
+
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(SOURCES
-    ${CMAKE_CURRENT_LIST_DIR}/src/animlib.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/arg_parse.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/backgrnd.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/config.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/config_file.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/destruct.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/editship.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/episodes.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/file.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/font.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/fonthand.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/game_menu.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/helptext.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/joystick.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/jukebox.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/keyboard.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/lds_play.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/loudness.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/lvllib.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/lvlmast.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/mainint.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/menus.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/mouse.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/mtrand.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/musmast.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/network.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/nortsong.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/nortvars.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/opentyr.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/opl.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/palette.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/params.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/pcxload.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/pcxmast.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/picload.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/player.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/shots.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/sizebuf.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/sndmast.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/sprite.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/starlib.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/tyrian2.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/varz.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/vga_palette.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/vga256d.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/video.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/video_scale.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/video_scale_hqNx.c
-    ${CMAKE_CURRENT_LIST_DIR}/src/xmas.c
+    ${CMAKE_CURRENT_LIST_DIR}/src/animlib.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/arg_parse.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/backgrnd.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/config.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/config_file.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/destruct.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/editship.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/episodes.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/file.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/font.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/fonthand.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/game_menu.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/helptext.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/joystick.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/jukebox.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/keyboard.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/lds_play.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/loudness.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/lvllib.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/lvlmast.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/mainint.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/menus.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/mouse.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/mtrand.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/musmast.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/network.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/nortsong.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/nortvars.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/opentyr.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/opl.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/palette.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/params.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/pcxload.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/pcxmast.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/picload.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/player.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/shots.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/sizebuf.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/sndmast.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/sprite.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/starlib.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/tyrian2.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/varz.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/vga_palette.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/vga256d.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/video.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/video_scale.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/video_scale_hqNx.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/xmas.cpp
 )
 
 add_executable(opentyrian ${SOURCES})
